--- a/MyFirstProject2/src/main/resources/templates/survey/index.html
+++ b/MyFirstProject2/src/main/resources/templates/survey/index.html
@@ -18,5 +18,8 @@
 		<td th:text="${survey.created}"></td>
 	</tr>
 </table>
+<form method="get" action="#" th:action="@{/survey/form}">
+<input type="submit" value="新規作成">
+</form>
 </body>
 </html>
